// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`manager/kustomize/extract extractPackageFile() extracts http dependency 1`] = `
Array [
  Object {
    "currentValue": "v0.0.1",
    "datasource": "github-tags",
    "depName": "user/repo",
  },
  Object {
    "currentValue": "1.19.0",
    "datasource": "github-tags",
    "depName": "fluxcd/flux",
  },
]
`;

exports[`manager/kustomize/extract extractPackageFile() extracts multiple image lines 1`] = `
Array [
  Object {
    "currentValue": "v0.0.1",
    "datasource": "git-tags",
    "depName": "moredhel/remote-kustomize",
    "lookupName": "https://moredhel/remote-kustomize.git",
  },
  Object {
    "currentValue": "v0.0.1",
    "datasource": "git-tags",
    "depName": "moredhel/remote-kustomize",
    "lookupName": "https://moredhel/remote-kustomize.git",
  },
]
`;

exports[`manager/kustomize/extract extractPackageFile() extracts sha256 instead of tag 1`] = `
Object {
  "deps": Array [
    Object {
      "currentDigest": "sha256:b0cfe264cb1143c7c660ddfd5c482464997d62d6bc9f97f8fdf3deefce881a8c",
      "currentValue": undefined,
      "datasource": "docker",
      "depName": "postgres",
      "replaceString": "postgres",
    },
    Object {
      "currentDigest": "sha256:3f18ce9e12e3ece07029895336f5497eeb2d9cb8fe148cc54d4905f77cbc062d",
      "currentValue": undefined,
      "datasource": "docker",
      "depName": "mariadb",
      "replaceString": "mariadb",
    },
    Object {
      "currentDigest": "sha256:25f5332d060da2c7ea2c8a85d2eac623bd0b5f97d508b165f846c7d172897438",
      "currentValue": "3.12.2",
      "datasource": "docker",
      "depName": "alpine",
      "replaceString": "newTag: 3.12.2
    digest: sha256:25f5332d060da2c7ea2c8a85d2eac623bd0b5f97d508b165f846c7d172897438",
    },
    Object {
      "currentDigest": "sha256:25f5332d060da2c7ea2c8a85d2eac623bd0b5f97d508b165f846c7d172897438",
      "currentValue": "1",
      "datasource": "docker",
      "depName": "1234567890.dkr.ecr.eu-central-1.amazonaws.com/test",
      "replaceString": "digest: sha256:25f5332d060da2c7ea2c8a85d2eac623bd0b5f97d508b165f846c7d172897438
    newTag: '1'",
    },
    Object {
      "currentDigest": "sha256:e1488cb900233d035575f0a7787448cb1fa93bed0ccc0d4efc1963d7d72a8f17",
      "currentValue": "1.32.1",
      "datasource": "docker",
      "depName": "busybox",
      "replaceString": "busybox:1.32.1",
    },
  ],
}
`;

exports[`manager/kustomize/extract extractPackageFile() extracts ssh dependency 1`] = `
Array [
  Object {
    "currentValue": "v0.0.1",
    "datasource": "github-tags",
    "depName": "moredhel/remote-kustomize",
  },
]
`;

exports[`manager/kustomize/extract extractPackageFile() extracts ssh dependency with a subdir 1`] = `
Array [
  Object {
    "currentValue": "v2.0.0",
    "datasource": "github-tags",
    "depName": "kubernetes-sigs/kustomize",
  },
]
`;

exports[`manager/kustomize/extract extractPackageFile() should extract bases from bases block and the resources block 1`] = `
Array [
  Object {
    "currentValue": "v0.0.1",
    "datasource": "github-tags",
    "depName": "moredhel/remote-kustomize",
  },
  Object {
    "currentValue": "1.19.0",
    "datasource": "github-tags",
    "depName": "fluxcd/flux",
  },
]
`;

exports[`manager/kustomize/extract extractPackageFile() should extract out image versions 1`] = `
Array [
  Object {
    "commitMessageTopic": "Node.js",
    "currentDigest": undefined,
    "currentValue": "v0.1.0",
    "datasource": "docker",
    "depName": "node",
    "replaceString": "node",
  },
  Object {
    "currentDigest": undefined,
    "currentValue": "v0.0.1",
    "datasource": "docker",
    "depName": "group/instance",
    "replaceString": "group/instance",
  },
  Object {
    "currentDigest": undefined,
    "currentValue": "v0.0.2",
    "datasource": "docker",
    "depName": "quay.io/test/repo",
    "replaceString": "quay.io/test/repo",
  },
  Object {
    "currentDigest": undefined,
    "currentValue": "v0.0.3",
    "datasource": "docker",
    "depName": "gitlab.com/org/suborg/image",
    "replaceString": "gitlab.com/org/suborg/image",
  },
  Object {
    "currentDigest": undefined,
    "currentValue": "v0.0.4",
    "datasource": "docker",
    "depName": "but.this.lives.on.local/private-registry",
    "replaceString": "but.this.lives.on.local/private-registry",
  },
]
`;
